<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.crighter.Activities.HowItWorks"
    android:background="@drawable/login_back">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shaded_background_white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        
        <ImageView
            android:id="@+id/iv_crooss"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/how_it_work_cr"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="How It Works?"
                android:textStyle="bold"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="8dp"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="45dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorhint">

                <VideoView
                    android:id="@+id/video_view1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

                <WebView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorBlack"
                    android:visibility="visible"/>

                <ImageView
                    android:id="@+id/iv_play_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/video_thumail"/>




            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/what_is_righter"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/what_crighter_ans"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/roboto_condensed"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_it_works"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_it_work_ans"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/roboto_condensed"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_text"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/roboto_condensed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/roboto_condensed" />

                </LinearLayout>

                </ScrollView>
            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
